Add Mesa Zink Package
Added Mesa Zink binary package to autobuild.xml, cmake and the viewer_manifest.py script so it is included in the installation executable.

--- a/indra/cmake/CMakeLists.txt
+++ b/indra/cmake/CMakeLists.txt
@@ -45,6 +45,7 @@ set(cmake_SOURCE_FILES
         LLWindow.cmake
         Linking.cmake
         MediaPluginBase.cmake    # <FS:Zi> Linux volume catcher
+	MesaZink.cmake
         Meshoptimizer.cmake
         NDOF.cmake
         OPENAL.cmake
