Initial LEB-based subdivision implementation

--- a/indra/CMakeLists.txt
+++ b/indra/CMakeLists.txt
@@ -114,6 +114,7 @@ add_subdirectory(${LIBS_OPEN_PREFIX}llrender)
 add_subdirectory(${LIBS_OPEN_PREFIX}llfilesystem)
 add_subdirectory(${LIBS_OPEN_PREFIX}llwindow)
 add_subdirectory(${LIBS_OPEN_PREFIX}llxml)
+add_subdirectory(${LIBS_OPEN_PREFIX}tssubdivlod)
 
 if (WINDOWS AND EXISTS ${LIBS_CLOSED_DIR}copy_win_scripts)
   add_subdirectory(${LIBS_CLOSED_PREFIX}copy_win_scripts)
